# buddhabrot

./: .gitignore  AnimationHandler.hpp  CMakeLists.txt  Makefile  README.md  TODO  animationhandler.hpp  cuehandler.cpp  cuehandler.hpp  displaymanager.cpp  displaymanager.hpp  imageanimator.cpp  imageanimator.hpp  main.cpp  main.hpp  mandel  mandel.c  mandel.h  newanimator.cpp  newanimator.hpp  renderthread.hpp  showdata.py  trajectory.cpp  trajectory.hpp  trajectorygenerator.cpp  trajectorygenerator.hpp  trajectoryset.cpp  trajectoryset.hpp  typedefs.hpp  vtkanimation.hpp  vtktest.cpp
